feat: add API response envelope, security principal and centralized exception handling
Aggiunge le fondamenta per risposte tipizzate e sicurezza dichiarativa:
ApiEnvelope<T> come envelope generico di successo/errore, AppPrincipal
per portare id/email/ruolo dai claim JWT senza query DB aggiuntive,
PrenotazioneAuthorizationService per i controlli di ownership via
@PreAuthorize, GlobalExceptionHandler per centralizzare la gestione
degli errori (validazione, accesso negato, conflitti di prenotazione,
errori generici), e ApiAuthenticationEntryPoint/ApiAccessDeniedHandler
per restituire lo stesso JSON ricco anche sui rifiuti a livello di
filtro di sicurezza. JwtAuthFilter ora popola le GrantedAuthority dal
token e SecurityConfig abilita @EnableMethodSecurity, il PasswordEncoder
e la registrazione dei nuovi entry point/handler.