@@ -1,5 +1,6 @@
 package com.prenotazioni.setting;
 
+import com.prenotazioni.security.AppPrincipal;
 import com.prenotazioni.service.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -7,21 +8,27 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
+import java.util.Locale;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
     private static final Logger logger = LoggerFactory.getLogger(JwtAuthFilter.class);
     
-    @Autowired
-    private JwtService jwtService;
+    private final JwtService jwtService;
+
+    JwtAuthFilter(JwtService jwtService) {
+        this.jwtService = jwtService;
+    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
@@ -49,7 +56,15 @@ public class JwtAuthFilter extends OncePerRequestFilter {
         }
         if (token != null && jwtService.validateToken(token)) {
             String email = jwtService.getEmailFromToken(token);
-            UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(email, null, java.util.Collections.emptyList());
+            Long id = jwtService.getUserIdFromToken(token);
+            String ruolo = jwtService.getRuoloFromToken(token);
+
+            AppPrincipal principal = new AppPrincipal(id, email, ruolo);
+            List<GrantedAuthority> authorities = ruolo != null
+                    ? List.of(new SimpleGrantedAuthority("ROLE_" + ruolo.toUpperCase(Locale.ROOT)))
+                    : List.of();
+
+            UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(principal, null, authorities);
             auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
             SecurityContextHolder.getContext().setAuthentication(auth);
         }
